fixing layout issue #981. accomodate header elements that might be placed in the "in this resource area".

--- a/public/stylesheets/extension2.css
+++ b/public/stylesheets/extension2.css
@@ -649,6 +649,7 @@ table.logos td {padding:1em !important;}
 
 .homesection dl {padding-bottom: 20px;}
 .homesection dt {color: #bbb; padding-bottom: 3px}
+.fullwidth {width:100%;}
 
 dl.events {margin-bottom:1.85em;}
 dl.events dt {font-size:1.4em;}
